syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "Timestamp.proto";
import "QueryHeader.proto";
import "ResponseHeader.proto";
import "SchedulableTransactionBody.proto";

/*
Gets information about a schedule in the network's action queue.

Responds with <tt>INVALID_SCHEDULE_ID</tt> if the requested schedule doesn't exist.
*/
message ScheduleGetInfoQuery {
  QueryHeader header = 1; // standard info sent from client to node including the signed payment, and what kind of response is requested (cost, state proof, both, or neither).
  ScheduleID scheduleID = 2; // The id of the schedule to interrogate
}

/*
  Information summarizing schedule state 
*/
message ScheduleInfo {  
  ScheduleID scheduleID = 1; // The id of the schedule
  oneof data {
    Timestamp deletion_time = 2; // If the schedule has been deleted, the consensus time when this occurred
    Timestamp execution_time = 3; // If the schedule has been executed, the consensus time when this occurred
  }
  Timestamp expirationTime = 4; // The time at which the schedule will expire
  SchedulableTransactionBody scheduledTransactionBody = 5; // The scheduled transaction
  string memo = 6; // The publicly visible memo of the schedule
  Key adminKey = 7; // The key used to delete the schedule from state
  KeyList signers = 8; // The Ed25519 keys the network deems to have signed the scheduled transaction
  AccountID creatorAccountID = 9; // The id of the account that created the schedule
  AccountID payerAccountID = 10; // The id of the account responsible for the service fee of the scheduled transaction
  TransactionID scheduledTransactionID = 11; // The transaction id that will be used in the record of the scheduled transaction (if it executes)
}  

/*
Response wrapper for the <tt>ScheduleInfo</tt>
*/
message ScheduleGetInfoResponse {
  ResponseHeader header = 1; // Standard response from node to client, including the requested fields: cost, or state proof, or both, or neither
  ScheduleInfo scheduleInfo = 2; // The information requested about this schedule instance
}
